@@ -1,4 +1,4 @@
-$Id: History,v 1.12 1999-11-17 07:45:14 stanaka Exp $
+$Id: History,v 1.13 1999-12-16 15:25:46 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+16th December 1999  John Allison (greps-V01-00-00)
+- Added G4Polyhedron::Transform and G4Polyhedron::InvertFacets (Evgeni
+  Chernaev).
 
 17th November 1999 Satoshi Tanaka (greps-V00-01-01)
 - Header comments for software reference manual
